--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
 	"require": {
 		"php": ">= 5.6.0",
-		"brick/math": "~0.5.2"
+		"brick/math": "^0.8.12"
 	},
 	"suggests": {
 		"ext-curl": "CURL is required by fastest BigFileTools filesize driver. To speed things up please enable CURL."
